--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
-      - run: npm install
-      - run: npm run build
+      - run: npm ci
+      - run: npm run build --if-present
