--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           node-version: 14.x
       - run: npm i
-      - run: npm run build 
+      - run: npm run build -prod
